--- a/assets/css/secondarypage.css
+++ b/assets/css/secondarypage.css
@@ -14,3 +14,10 @@
     background-color: var(--clr-dark);
     color: var(--clr-light);
   }
+
+  .hero {
+    color: var(--clr-accent3);
+    height: 800px;
+    width: 100%;
+    margin-bottom: 25px;
+}
