--- a/assets/css/mainpage.css
+++ b/assets/css/mainpage.css
@@ -1,7 +1,30 @@
-* {
-    
+@import url('https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,100..900;1,100..900&display=swap');
+
+/* Main body Styling */
+body {
+    font-family: 'Exo 2', sans-serif;
     margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+    font-size: 20px;
+    background-color: #000;
+    color: #eee;
 }
 
+/* a tag styling */
+a {
+    color: #eee;
+    text-decoration: none;
+}
+
+/* Header Styling */
+header {
+    max-width: 80%;
+    width: 1140px;
+    margin: auto;
+    height: 50px;
+    display: flex;
+    align-items: center;
+}
+
+header a {
+    margin-right: 40px;
+}
