--- a/assets/css/mainpage.css
+++ b/assets/css/mainpage.css
@@ -23,8 +23,45 @@ header {
     height: 50px;
     display: flex;
     align-items: center;
+    position: relative;
+    z-index: 100;
 }
 
 header a {
     margin-right: 40px;
+}
+
+/* slider styling */
+
+.slider {
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    margin-top: -50px;
+    position: relative;
+}
+
+.slider .list .item {
+    position: absolute;
+    inset: 0 0 0 0;
+}
+
+.slider .list .item img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+/* text styling in slider */
+.slider .list .item .content {
+    position: absolute;
+    top: 20%;
+    max-width: 80%;
+    width: 1140px;
+    left: 50%;
+    transform: translateX(-50%);
+    padding-right: 30%;
+    box-sizing: border-box;
+    color: #ffffff;
+    text-shadow: 0 5px 10px black;
 }
