.html - changed buttons .css added styling to buttons
added button styling to css sheet for Day and Night - which will become image triggers to swap photos

added styling to left and right buttons

added color change for city nicknames

added city and nickname styling

** edit note: may flip day and night color combinations once placeholder images replaced with actual images - need to see color flow better

--- a/assets/css/mainpage.css
+++ b/assets/css/mainpage.css
@@ -65,3 +65,48 @@ header a {
     color: #ffffff;
     text-shadow: 0 5px 10px black;
 }
+
+/* state styling */
+.slider .list .item .content .state {
+    letter-spacing: 5px;
+    font-weight: bold;
+}
+
+/* styling for city and nickname */
+.slider .list .item .content .city,
+.slider .list .item .content .nickname {
+    font-size: 4em;
+    font-weight: bold;
+    line-height: 1.3em;
+}
+
+/* color change for city nicknames - may cycle this based on city */
+.slider .list .item .content .nickname {
+    color: rgb(0, 255, 170)
+}
+
+/* button styling */
+.slider .list .item .content .buttons {
+    display: grid;
+    grid-template-columns: repeat(2, 130px);
+    grid-template-rows: 40px;
+    margin-top: 15px;
+    gap: 10px;
+}
+
+/* left button - Day */
+.slider .list .item .content button {
+    border: none;
+    letter-spacing: 5px;
+    background-color: #eee;
+    font-weight: 600;
+}
+
+/* right button - Night  */
+/* adding secondary comment - not sure on how I like the Day - Night colors may flip after getting teams opinion */
+.slider .list .item .content button:nth-child(2) {
+    color: #eee;
+    background-color: transparent;
+    border: 1px solid #eee;
+    text-shadow: 0 5px 10px black;
+}
