--- a/assets/css/secondarypage.css
+++ b/assets/css/secondarypage.css
@@ -21,3 +21,8 @@ body {
   width: 100%;
   margin-bottom: 25px;
 }
+
+.testing {
+  background-color: var(--clr-accent2);
+  color: var(--clr-dark);
+}
