--- a/assets/css/secondarypage.css
+++ b/assets/css/secondarypage.css
@@ -1,5 +1,5 @@
 /* Add Google Fonts */
-@import url(./fonts.css);
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 :root {
   --clr-dark: #222831;
@@ -16,6 +16,10 @@ html {
 body {
   background-color: var(--clr-dark);
   color: var(--clr-light);
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-display: swap;
 }
 
 .hero {
@@ -28,9 +32,12 @@ body {
 .cards {
   background-color: var(--clr-accent2);
   color: var(--clr-dark);
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 100;
 }
 
-.navy a{
+.navy a {
   color: var(--clr-accent2);
 }
 
@@ -39,6 +46,6 @@ body {
   color: var(--clr-dark);
 }
 
-.shadow{
+.shadow {
   text-shadow: 1px 1px 5px black;
 }
