--- a/assets/css/mainpage.css
+++ b/assets/css/mainpage.css
@@ -1,9 +1,14 @@
+/* Font Selection Imports  */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Castoro+Titling&family=Shrikhand&display=swap');
+
+
 /* Main Body Styling */
 body{
     margin: 0;
     background-color: #000;
-    color: #eee;
+    color: #E9F2FF;
     font-family: Poppins;
     font-size: 12px;
 }
@@ -25,8 +30,12 @@ header{
     z-index: 100;
 }
 header a{
-    color: #eee;
+    color: #E9F2FF;
     margin-right: 40px;
+    font-family: Castoro Titling;
+    font-weight: bold;
+    font-size: 1.5em;
+    text-shadow: 0 5px 10px #0004;
 }
 
 /* slider styling */
@@ -42,7 +51,9 @@ header a{
     height: 100%;
     position: absolute;
     inset: 0 0 0 0;
+    
 }
+
 .slider .list .item img{
     width: 100%;
     height: 100%;
@@ -58,25 +69,35 @@ header a{
     transform: translateX(-50%);
     padding-right: 30%;
     box-sizing: border-box;
-    color: rgb(206, 206, 206);
+    color: #E9F2FF;
     text-shadow: 0 5px 10px #0004;
 }
 
 /* state styling */
 .slider .list .item .state{
-    font-weight: bold;
-    letter-spacing: 8px;
-    font-size: 2em;
+    font-weight: 400;
+    letter-spacing: 12px;
+    font-size: 1.5em;
+    font-family: Shrikhand;
     text-shadow: 0 5px 10px rgb(0, 0, 0);
 }
 
 /* styling for city and nickname */
-.slider .list .item .city,
-.slider .list .item .nickname{
+.slider .list .item .city{
     font-size: 5em;
-    font-weight: bold;
-    letter-spacing: 5px;
-    line-height: 1.3em;
+    font-weight: 700;
+    letter-spacing: 8px;
+    line-height: 1em;
+    font-family: Shrikhand;
+    text-shadow: 0 5px 10px rgb(0, 0, 0);
+}
+
+.slider .list .item .nickname{
+    font-size: 3.5em;
+    font-weight: 700;
+    letter-spacing: 8px;
+    line-height: 1em;
+    font-family: Shrikhand;
     text-shadow: 0 5px 10px rgb(0, 0, 0);
 }
 
@@ -84,13 +105,22 @@ header a{
     font-size: 1.5em;
     font-weight: 300; 
     text-shadow: 0 5px 10px rgb(0, 0, 0);
-    color: #fff;
-    -webkit-text-stroke: .15px #0000001f;
+    color: #E9F2FF;
+    letter-spacing: 1.5px;
+}
+
+.slider .list .item .city,
+.slider .list .item .nickname,
+.slider .list .item .state,
+.slider .list .item .des{
+    background-color: hsla(0, 0%, 0%, 0.356);
+    border-radius: 5px;
+    padding-left: 20px;
 }
 
 /* color change for city nicknames - may cycle this based on city */
 .slider .list .item .nickname{
-    color: rgb(0, 255, 170);
+    color: #FBC4AD;
 }
 
 /* button styling */
@@ -104,16 +134,17 @@ header a{
 
 .slider .list .item .buttons button{
     border: none;
-    background-color: #eee;
+    background-color: #E9F2FF;
     letter-spacing: 3px;
-    font-family: Poppins;
-    font-weight: 500;
+    font-family: Castoro Titling;
+    font-weight: bold;
+    font-size: 1.25em;
 }
 
 .slider .list .item .buttons button:nth-child(2){
     background-color: transparent;
     border: 1px solid #fff;
-    color: #eee;
+    color: #E9F2FF;
 }
 
 /* thumbnail */
@@ -153,11 +184,14 @@ header a{
 }
 .thumbnail .item .content .city{
     font-weight: 500;
+    font-size: 1.5em;
 }
 
 .thumbnail .item .content .description{
     font-weight: 300;
-    color: rgb(0, 255, 170);
+    color: #FBC4AD;
+    font-weight: bold;
+    font-size: 1.5em;
 }
 
 /* arrowIcon */
@@ -283,7 +317,7 @@ header a{
     z-index: 1000;
     width: 0%;
     height: 3px;
-    background-color: rgb(0, 255, 170);
+    background-color: #FBC4AD;
     left: 0;
     top: 0;
 }
