--- a/assets/css/mainpage.css
+++ b/assets/css/mainpage.css
@@ -37,6 +37,7 @@ header {
     position: relative;
     z-index: 100;
 }
+/* header text styling */
 header a {
     color: #E9F2FF;
     margin-right: 40px;
@@ -54,12 +55,12 @@ header a {
     overflow: hidden;
     position: relative;
 }
+
 .slider .list .item {
     width: 100%;
     height: 100%;
     position: absolute;
     inset: 0 0 0 0;
-    
 }
 
 .slider .list .item img {
@@ -100,6 +101,7 @@ header a {
     text-shadow: 0 5px 10px rgb(0, 0, 0);
 }
 
+/* nickname styling in slider */
 .slider .list .item .nickname {
     font-size: 3.5em;
     font-weight: 700;
@@ -109,6 +111,7 @@ header a {
     text-shadow: 0 5px 10px rgb(0, 0, 0);
 }
 
+/* description styling in slider */
 .slider .list .item .des {
     font-size: 1.5em;
     font-weight: 300; 
@@ -117,6 +120,7 @@ header a {
     letter-spacing: 1.5px;
 }
 
+/* container behind slider  */
 .slider .list .item .city,
 .slider .list .item .nickname,
 .slider .list .item .state,
@@ -140,6 +144,7 @@ header a {
     margin-top: 20px;
 }
 
+/* day button styling */
 .slider .list .item .buttons button {
     border: none;
     background-color: #E9F2FF;
@@ -149,6 +154,7 @@ header a {
     font-size: 1.25em;
 }
 
+/* night button styling */
 .slider .list .item .buttons button:nth-child(2) {
     background-color: transparent;
     border: 1px solid #fff;
@@ -190,11 +196,14 @@ header a {
     left: 10px;
     right: 10px;
 }
+
+/* thumbnail city styling */
 .thumbnail .item .content .city {
     font-weight: 500;
     font-size: 1.5em;
 }
 
+/* thumbnail nickname styling */
 .thumbnail .item .content .description {
     font-weight: 300;
     color: #FBC4AD;
@@ -220,7 +229,7 @@ header a {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-color: #eee4;
+    background-color: rgba(0, 0, 0, 0.69);
     border: none;
     color: #fff;
     font-family: monospace;
@@ -261,6 +270,8 @@ header a {
         opacity: 1;
     }
 }
+
+/* control animation time for each element */
 .slider .list .item:nth-child(1) .content .city {
     animation-delay: 1.2s!important;
 }
@@ -273,6 +284,7 @@ header a {
 .slider .list .item:nth-child(1) .content .buttons {
     animation-delay: 2.2s!important;
 }
+
 /* setup for next button click animations */
 .slider.next .list .item:nth-child(1) img {
     width: 150px;
