--- a/assets/css/mainpage.css
+++ b/assets/css/mainpage.css
@@ -28,18 +28,19 @@ a {
 
 /* header styling */
 header {
-    width: 1140px;
-    max-width: 80%;
+    width: auto;
     margin: auto;
     height: 50px;
     position: relative;
     z-index: 100;
+    display: flex;
+    justify-content: center;
 }
 /* header text styling */
 header nav {
     font-family: Castoro Titling;
     font-weight: bold;
-    font-size: 1.5em;
+    font-size: 2em;
     text-shadow: 0 5px 10px #0004;
 }
 
@@ -183,8 +184,8 @@ header nav {
 
 /* thumbnail image sizing */
 .thumbnail .item {
-    width: 150px;
-    height: 220px;
+    width: 230px;
+    height: 300px;
     flex-shrink: 0;
     position: relative;
 }
@@ -429,6 +430,12 @@ header nav {
         font-size: 1.25em;
         letter-spacing: 1.3px;
     }
+    .thumbnail .item {
+        width: 230px;
+        height: 300px;
+        flex-shrink: 0;
+        position: relative;
+    }
 }
     /* day button styling */
     .slider .list .item .buttons button {
@@ -447,6 +454,9 @@ header nav {
         font-size: 1.25em;
     }
 }
+
+/* Media query for larger screens  */
+
 
 
 /* - [ ]  media query break points
