Updated image container CSS for secondpage and updated image

--- a/assets/css/secondarypage.css
+++ b/assets/css/secondarypage.css
@@ -37,6 +37,11 @@ body {
   font-weight: 100;
 }
 
+.container-lg {
+  object-fit: cover !important;
+  overflow: hidden !important;
+}
+
 .navy a {
   color: var(--clr-accent2);
 }
