--- a/assets/css/mediaquery.css
+++ b/assets/css/mediaquery.css
@@ -40,6 +40,13 @@
         width: 170px;
         height: 250px;
     }
+    .arrowIcon {
+        font-size: 1.5em;
+    }
+    .arrowIcon button {
+        width: 40px;
+        height: 40px;
+    }
 }
 
 /* Media query for larger screens  */
