--- a/assets/css/secondarypage.css
+++ b/assets/css/secondarypage.css
@@ -136,7 +136,21 @@ header nav {
   letter-spacing: 1.2px;
 }
 
-
+/* Link styling */
+.link {
+  color: var(--darkmain);
+  transition: .5s;
+  margin-right: 30px;
+  font-size: 1.25em;
+  font-weight: 300;
+  text-shadow: 1px 1px 2px rgb(0, 0, 0), 0 0 1em rgb(0, 0, 0), 0 0 0.2em rgb(0, 0, 0);
+}
+/* header text hover styling */
+.link:hover {
+  color: var(--darksecond);
+  transition: .5s;
+  transform: scale(1.1);
+}
 
 
 /* ----------------------------------------------------END-------------------------------------------------------------------- */
