secondary location changes, relocation changes
added footer to each secondary page.

Added return links to footer and linked to developers page.

added individual nav links to each page in header to link to other locations not the current one.

--- a/assets/css/secondarypage.css
+++ b/assets/css/secondarypage.css
@@ -152,5 +152,8 @@ header nav {
   transform: scale(1.1);
 }
 
-
+/* Footer Styling */
+.small.text-muted {
+  color: var(--darkmain) !important;
+}
 /* ----------------------------------------------------END-------------------------------------------------------------------- */
