--- a/assets/css/secondarypage.css
+++ b/assets/css/secondarypage.css
@@ -152,8 +152,32 @@ header nav {
   transform: scale(1.1);
 }
 
+/* Button Styling - Try Again */
+.button {
+  background-color: var(--darkmain);
+  color: black;
+  font-size: 1em;
+  font-weight: 500;
+  border-radius: 10px;
+  padding: 5px 10px;
+  margin: 10px;
+}
+
 /* Footer Styling */
 .small.text-muted {
   color: var(--darkmain) !important;
+}
+
+.linkfooter {
+  color: var(--darkmain);
+  transition: .5s;
+  margin-right: 30px;
+  font-weight: 300;
+  text-shadow: 1px 1px 2px rgb(0, 0, 0), 0 0 1em rgb(0, 0, 0), 0 0 0.2em rgb(0, 0, 0);
+}
+
+.linkfooter:hover {
+  color: var(--darksecond);
+  transition: .5s;
 }
 /* ----------------------------------------------------END-------------------------------------------------------------------- */
